cabal-version: 3.4

-- SPDX-FileCopyrightText: 2022 Severen Redwood <me@severen.dev>
-- SPDX-License-Identifier: CC0-1.0

name: sly
version: 0.1.0
synopsis: An interpreter for the pure untyped λ-calculus.
description: Sly is an interpreter for the pure untyped λ-calculus.
category: LambdaCalculus, Language, Teaching
author: Severen Redwood
maintainer: me@severen.dev

license: GPL-3.0-or-later
license-file: LICENSE
copyright: (c) 2022 Severen Redwood

homepage: https://github.com/severen/sly
bug-reports: https://github.com/severen/sly/issues
tested-with: ghc == {9.4.7, 9.6.3}

extra-source-files: cabal.project
extra-doc-files: CHANGELOG.md LICENSES/*.txt

source-repository head
  type: git
  location: https://github.com/severen/sly.git

common defaults
  ghc-options: -W -Wall -fplugin=Effectful.Plugin
  default-language: GHC2021
  default-extensions:
    ApplicativeDo,
    BlockArguments,
    DuplicateRecordFields,
    ImportQualifiedPost,
    LambdaCase,
    LexicalNegation,
    NoFieldSelectors,
    OverloadedRecordDot,
    OverloadedStrings,
    QuasiQuotes,
    RecordWildCards,
    UnicodeSyntax,

common deps
  build-depends:
    base >=4.17.0.0 && <5.0.0.0,
    bytestring ^>=0.11.5.2 || ^>=0.12.0.2,
    containers ^>=0.6.7,
    effectful-core ^>=2.3.0.0,
    effectful-plugin ^>=1.1.0.2,
    megaparsec ^>=9.6.0,
    parser-combinators ^>=1.3.0,
    string-interpolate ^>=0.3.2.1,
    text ^>=2.1,
    transformers ^>=0.5.6.2 || ^>=0.6.1.0,
    unicode-data ^>=0.4.0.1,

common exe-deps
  build-depends:
    sly,
    haskeline ^>=0.8.2.1,
    optparse-applicative ^>=0.18.1.0,
    random ^>=1.2.1.1,

common test-deps
  build-depends:
    sly,
    hedgehog ^>=1.4,
    hspec ^>=2.11.7,
    hspec-megaparsec ^>=2.2.1,
    tasty ^>=1.5,
    tasty-hedgehog ^>=1.4.0.2,
    tasty-hspec ^>=1.2.0.4,

library
  import: defaults, deps
  exposed-modules: Sly.Eval, Sly.Syntax, Sly.Parser

  hs-source-dirs: src

executable sly
  import: defaults, deps, exe-deps
  other-modules: Paths_sly
  autogen-modules: Paths_sly

  hs-source-dirs: app
  main-is: Main.hs

test-suite test
  import: defaults, deps, test-deps

  hs-source-dirs: tests
  type: exitcode-stdio-1.0

  main-is: Test.hs
  other-modules: UnitTests, PropertyTests
