cabal-version: 3.0

-- SPDX-FileCopyrightText: 2022 Severen Redwood <sev@severen.dev>
-- SPDX-License-Identifier: CC0-1.0

name: sly
version: 0.1.0
synopsis: An interpreter for the pure untyped λ-calculus.
description: Sly is an interpreter for the pure untyped λ-calculus.
category: LambdaCalculus, Language, Teaching
author: Severen Redwood
maintainer: sev@severen.dev

license: GPL-3.0-or-later
license-file: LICENSE
copyright: (c) 2022 Severen Redwood

homepage: https://github.com/severen/sly
bug-reports: https://github.com/severen/sly/issues
tested-with: GHC == {9.6.6, 9.8.2, 9.10.1}

extra-source-files: cabal.project
extra-doc-files: CHANGELOG.md LICENSES/*.txt

source-repository head
  type: git
  location: https://github.com/severen/sly.git

common defaults
  ghc-options: -W -Wall -fplugin=Effectful.Plugin
  default-language: GHC2021
  default-extensions:
    ApplicativeDo,
    BlockArguments,
    DuplicateRecordFields,
    ImportQualifiedPost,
    LambdaCase,
    LexicalNegation,
    NoFieldSelectors,
    OverloadedRecordDot,
    OverloadedStrings,
    QuasiQuotes,
    RecordWildCards,
    UnicodeSyntax,

common deps
  build-depends:
    base >=4.18.2.1 && <5,
    bytestring ^>=0.11.5.3 || ^>=0.12.1.0,
    containers ^>=0.6.7 || ^>=0.7,
    effectful ^>=2.5.1.0,
    effectful-core ^>=2.5.1.0,
    effectful-plugin ^>=1.1.0.4,
    megaparsec ^>=9.6.0,
    parser-combinators ^>=1.3.0,
    string-interpolate ^>=0.3.4.0,
    text ^>=2.1.2,
    transformers ^>=0.6.1.0,
    unicode-data ^>=0.6.0,

common exe-deps
  build-depends:
    sly,
    haskeline ^>=0.8.2.1,
    optparse-applicative ^>=0.18.1.0,
    random ^>=1.3.0,

common test-deps
  build-depends:
    sly,
    hedgehog ^>=1.5,
    hspec ^>=2.11.10,
    hspec-megaparsec ^>=2.2.1,
    tasty ^>=1.5.3,
    tasty-hedgehog ^>=1.4.0.2,
    tasty-hspec ^>=1.2.0.4,

library
  import: defaults, deps
  exposed-modules: Sly.Eval, Sly.Syntax, Sly.Parser

  hs-source-dirs: src

executable sly
  import: defaults, deps, exe-deps
  other-modules: Paths_sly
  autogen-modules: Paths_sly

  hs-source-dirs: app
  main-is: Main.hs

test-suite test
  import: defaults, deps, test-deps

  hs-source-dirs: tests
  type: exitcode-stdio-1.0

  main-is: Test.hs
  other-modules: UnitTests, PropertyTests
